@@ -1,6 +1,7 @@
 pgmemcache 2.1.1-DEV
 ====================
 * Fix errors and warnings exposed by GCC 4.8
+* Make the memcache binary protocol the default
 
 pgmemcache 2.1.0
 ================
